Updated bed-combine. More efficient, only reads one line at a time
Multiple BED files can be used, but only one line is read from each at a
time.